fix: Embeds don't extend beyond edges of container on small screens
- Twitter embeds keep this behavior if screen is shrunk sufficiently
	- Loading on small screen initially will keep desired behavior

--- a/blocks/embed/embed.css
+++ b/blocks/embed/embed.css
@@ -8,19 +8,11 @@
 }
 
 .cmp-embed--instagram .instagram-media {
-  width: 80%;
-}
-
-.cmp-embed--instagram .cmp-embed__container {
-  justify-content: center;
+  width: 100%;
+  min-width: unset !important;
 }
 
 .cmp-embed--twitter .twitter-tweet {
   justify-content: center;
-}
-
-@media (min-width: 900px) {
-  .cmp-embed--instagram .instagram-media {
-    width: 100%;
-  }
+  margin: 0 !important;
 }
